force-app/main/default/objects/Work_Order_Room__c/Work_Order_Room__c.object-meta.xml
<CustomObject>
    <label>Work Order Location</label>
    <nameField>
        <label>Work Order Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Work Order Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>