force-app/main/default/objects/Work_Order_Room__c/fields/AccountId__c.field-meta.xml
<CustomField>
    <fullName>AccountId__c</fullName>
    <formula>CASESAFEID( Work_Order__r.AccountId )</formula>
    <label>AccountId</label>
    <type>Text</type>
</CustomField>