force-app/main/default/objects/Work_Order_Room__c/fields/Building__c.field-meta.xml
<CustomField>
    <fullName>Building__c</fullName>
    <description>Because the formula field is not being calculated on FSL App</description>
    <label>Building</label>
    <length>255</length>
    <type>Text</type>
</CustomField>