force-app/main/default/objects/Work_Order_Room__c/fields/Cannot_Complete_Details__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Complete_Details__c</fullName>
    <label>Cannot Complete Details</label>
    <type>TextArea</type>
</CustomField>