force-app/main/default/objects/Work_Order_Room__c/fields/Generate_Work_Order_Line_Item__c.field-meta.xml
<CustomField>
    <fullName>Generate_Work_Order_Line_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Work Order Line Item</label>
    <type>Checkbox</type>
</CustomField>