force-app/main/default/objects/Work_Order_Room__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <description>FLS is wont show formula fields</description>
    <label>Location</label>
    <length>25</length>
    <type>Text</type>
</CustomField>