force-app/main/default/objects/Work_Order_Room__c/fields/Location_Barcode__c.field-meta.xml
<CustomField>
    <fullName>Location_Barcode__c</fullName>
    <label>Location Barcode</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>