force-app/main/default/objects/Work_Order_Room__c/fields/Location_Notes__c.field-meta.xml
<CustomField>
    <fullName>Location_Notes__c</fullName>
    <label>Location Notes</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>