force-app/main/default/objects/Work_Order_Room__c/fields/Location_Type__c.field-meta.xml
<CustomField>
    <fullName>Location_Type__c</fullName>
    <label>Location Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Auditorium/Theatre</fullName>
            </value>
            <value>
                <fullName>Bar</fullName>
            </value>
            <value>
                <fullName>Basement</fullName>
            </value>
            <value>
                <fullName>Base of building</fullName>
            </value>
            <value>
                <fullName>Cafeteria/Lunch Room</fullName>
            </value>
            <value>
                <fullName>Compactor Room</fullName>
            </value>
            <value>
                <fullName>Day Care</fullName>
            </value>
            <value>
                <fullName>Dining area</fullName>
            </value>
            <value>
                <fullName>Finish Product Warehouse</fullName>
            </value>
            <value>
                <fullName>First Aid Room</fullName>
            </value>
            <value>
                <fullName>Floor</fullName>
            </value>
            <value>
                <fullName>Food Court</fullName>
            </value>
            <value>
                <fullName>Gym/Fitness Centre</fullName>
            </value>
            <value>
                <fullName>Hallway</fullName>
            </value>
            <value>
                <fullName>Kitchen</fullName>
            </value>
            <value>
                <fullName>Kitchenette</fullName>
            </value>
            <value>
                <fullName>Level</fullName>
            </value>
            <value>
                <fullName>Loading dock</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Locker Room/Change Room</fullName>
            </value>
            <value>
                <fullName>Main Office</fullName>
            </value>
            <value>
                <fullName>Patio</fullName>
            </value>
            <value>
                <fullName>Plant</fullName>
            </value>
            <value>
                <fullName>Raw Product Storage</fullName>
            </value>
            <value>
                <fullName>Reception</fullName>
            </value>
            <value>
                <fullName>Security</fullName>
            </value>
            <value>
                <fullName>Shipping &amp; receiving</fullName>
            </value>
            <value>
                <fullName>Warehouse</fullName>
            </value>
            <value>
                <fullName>Washroom</fullName>
            </value>
            <value>
                <fullName>Waste Disposal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>