force-app/main/default/objects/Work_Order_Room__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Assets To Be Scanned</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>