force-app/main/default/objects/Work_Order_Room__c/fields/Number_of_Products_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Products_Serviced__c</fullName>
    <label>Number of Products Serviced</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>