force-app/main/default/objects/Work_Order_Room__c/fields/Number_of_Rooms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Rooms__c</fullName>
    <label>Number of Rooms</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Number_of_Rooms</valueSetName>
    </valueSet>
</CustomField>