force-app/main/default/objects/Work_Order_Room__c/fields/PestAuditable__c.field-meta.xml
<CustomField>
    <fullName>PestAuditable__c</fullName>
    <formula>Work_Order__r.Account.PEST_Auditable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PestAuditable</label>
    <type>Checkbox</type>
</CustomField>