force-app/main/default/objects/Work_Order_Room__c/fields/Scanned_In__c.field-meta.xml
<CustomField>
    <fullName>Scanned_In__c</fullName>
    <label>Scanned In</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>