force-app/main/default/objects/Work_Order_Room__c/fields/Scanned_Out_Excess_Bar_Codes__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Out_Excess_Bar_Codes__c</fullName>
    <label>Scanned Out (Excess Bar Codes)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>