force-app/main/default/objects/Work_Order_Room__c/fields/Scanned_Out_Processed__c.field-meta.xml
<CustomField>
    <fullName>Scanned_Out_Processed__c</fullName>
    <label>Scanned Out (Processed)</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>