force-app/main/default/objects/Work_Order_Room__c/fields/Survey_Location__c.field-meta.xml
<CustomField>
    <fullName>Survey_Location__c</fullName>
    <label>Survey Location</label>
    <referenceTo>Survey_Location__c</referenceTo>
    <relationshipName>Work_Order_Rooms</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>