force-app/main/default/objects/Work_Order_Room__c/fields/Work_Order_Pricebook__c.field-meta.xml
<CustomField>
    <fullName>Work_Order_Pricebook__c</fullName>
    <formula>CASESAFEID( Work_Order__r.Pricebook2Id )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Work Order Pricebook</label>
    <type>Text</type>
</CustomField>