force-app/main/default/objects/Work_Order_Room__c/validationRules/Require_Cannot_Complete_Reason.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Cannot_Complete_Reason</fullName>
    <active>true</active>
    <description>If Work Order Location is marked as Cannot Complete, then a Cannot Complete reason must be entered</description>
    <errorConditionFormula>AND( TEXT( Status__c ) =  $Setup.Field_Service_Settings__c.Cannot_Complete_Status_Value__c  , ISBLANK(  TEXT(Cannot_Complete_Reason__c ) ),   CASESAFEID($User.ProfileId)   &lt;&gt;  $Setup.Field_Service_Settings__c.System_Administrator_Profile_Id__c  )</errorConditionFormula>
    <errorMessage>Please enter a Cannot Complete Reason for this Work Order Location</errorMessage>
</ValidationRule>